fix sidemenu overlap

--- a/src/styles/sidemenu.module.css
+++ b/src/styles/sidemenu.module.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  z-index: -1;
 }
 
 .side-menu-item {
